# wallet_bot

./: .env  .gitignore  README.md  analysis_patterns.ipynb  analyze_excel.py  analyze_excel_deep.py  analyze_excel_new.py  analyze_sheets_full.py  clean_history.py  context.md  debug_output.txt  detailed_debug.txt  fallback_results.txt  import_history.py  inspect_sheets.py  main.py  pyproject.toml  repair_dates.py
resources/: RV_ RappiCard - Resumen de transacción (1).eml  RV_ RappiCard - Resumen de transacción.eml  Task NU.xml  Transacción aprobada con tu tarjeta de beneficios.eml  autotrx_log (2).txt  downloaded-logs-20260629-213236.json  downloaded-logs-20260629-214131.json  downloaded-logs-20260629-220419.json  downloaded-logs-20260701-113629.json  runlog.txt  wallet_records (1).xlsx  wallet_records (3).xlsx  wallet_records.xlsx
src/: bot.py  config.py  ingestion.py  loader.py  parser.py
tests/: check_config_keys.py  debug_accumulation_deep.py  debug_bot_interaction.py  debug_bot_leydi.py  debug_loader.py  debug_loader_schema.py  debug_manual_entry.py  debug_parser.py  debug_parser_factura.py  debug_real_email.py  debug_real_save.py  debug_save_oauth.py  debug_sheet_headers.py  demo_gemini.py  get_leydi_id.py  live_test_accumulation.py  manual_test_interactive.py  reproduce_edge_cases.py  reproduce_parser.py  reproduce_transfer.py  test_dual_bot.py  test_fallback.py  test_fallback_logging.py  test_flow_logic.py  test_flow_simulation.py  test_forwarding.py  test_inline_manual.py  test_parser.py  test_restart_logic.py  test_webhook_standalone.py  verify_connections.py  (+1 more)
